fix mobile width alignment

--- a/src/container/banner/banner.css
+++ b/src/container/banner/banner.css
@@ -1,8 +1,15 @@
-
+.banner__image img {
+  width: 100%;
+}
 
 /* Tablet */
 
 @media (min-width: 768px){
+  .banner__image{
+    width: 50%;
+    flex: 0 0 auto;
+  }
+
   .banner__contant{
     text-align: right;
   }
@@ -25,6 +32,5 @@
 
   .banner__image {
     width: 40%;
-    flex: 0 0 auto;
   }
 }
